cart deatil and auth refactor
