# src/modules/security/routes.js
@@ -2,38 +2,27 @@ import { Router } from "express";
 const router = Router();
 import User from "./controllers/UserControllers";
 import Role from "./controllers/RoleController";
-import Auth from "./services/authUser";
+import {authAction, authMethodAction} from "./controllers/AuthController";
 
     //Users
-        //Signup
+    //Signup
     router.post('/signup', User.signup)
-        //Verify user
+    //Verify user
     router.post('/auth/verify', User.verify)
-        //Signin
-    router.post('/signin', User.signin)
-        //Change password
+
+    //Change password
     router.post('/reset-password/:email',User.resetPassword)
     router.post('/reset-password/:userid/:token',User.changePassword)
 
-        //Login Google
-    router.get('/auth/google',Auth.googleScope)
-    router.get('/auth/google/redirect',
-                Auth.google,
-                User.loginStrategy
-    )
+    //AUTH
+    router.post('/api/auth', authAction);
+    router.post('/api/auth-method', authMethodAction);
 
-        //Login Facebook
-    router.get('/auth/facebook', Auth.facebook);
-    router.get('/auth/facebook/callback',
-                Auth.facebook,
-                User.loginStrategy
-    );
+    /* //Dashboard TEST Authentication token
+    router.get("/profile", Auth.validateToken); */
 
-  //Dashboard TEST Authentication token
-  router.get("/profile", Auth.validateToken);
-
-  //Roles
-  //Add role
-  router.post("/role", Role.addRole);
+    //Roles
+    //Add role
+    router.post("/role", Role.addRole);
 
 export default router
